# ssh-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.agents/plugins/: marketplace.json
.cargo/: audit.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release-binaries.yml
contrib/: hekatessh-daemon.plist  hekatessh-daemon.service  ssh-mcp-daemon.plist  ssh-mcp-daemon.service
examples/: import-ssh-config.rs
plugin/: .mcp.json  README.md  settings.json
plugin/.claude-plugin/: plugin.json
plugin/.codex-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/tools/: hekatessh-hook.sh  ssh-mcp-hook.sh
src/: audit.rs  bridge.rs  changeset.rs  config.rs  control.rs  daemon.rs  hook.rs  import.rs  lib.rs  main.rs  mcp.rs  pathnorm.rs  paths.rs  serve.rs  trace.rs
src/mcp/: mod.rs  types.rs
src/mcp/tools/: exec.rs  list_agent_keys.rs  list_hosts.rs  mod.rs  propose_host.rs  trace.rs  transfer.rs
src/policy/: command.rs  gate.rs  mod.rs  permission.rs
src/ssh/: connect.rs  handler.rs  mod.rs  pool.rs  rsync.rs  transfer.rs
src/ssh/transfer/: common.rs  mod.rs  posix.rs  windows.rs
tests/: cc_grammar.rs  ssh_e2e.rs  transfer_e2e.rs
