[package]
name = "ssh-mcp"
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Policy-gated SSH execution MCP server for Claude Code"
repository = "https://github.com/naoto256/ssh-mcp"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
# Formatting-preserving TOML DOM, used by `propose_host` to append entries
# to `ssh-hosts.toml` without rewriting the user's existing layout.
toml_edit = "0.23"
serde_json = "1.0.150"
rand = "0.9"
regex = "1.12.3"
globset = "0.4.18"
russh = "0.61.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "time", "process", "fs"] }
rmcp = { version = "1.7.0", features = ["server", "transport-async-rw", "macros", "schemars"] }
schemars = "1.2.1"
jiff = { version = "0.2.24", features = ["serde"] }
libc = "0.2"
tar = "0.4"
tempfile = "3"
flate2 = "1"
sha2 = "0.10"
walkdir = "2"
base64 = "0.22"
# Local-side decoding of remote stdout/stderr when the remote console
# code page is not UTF-8 (typically Japanese Windows = CP932). The remote
# is told nothing about encoding — we just probe `chcp` once at connect
# time and decode bytes on the daemon side.
encoding_rs = "0.8"

[profile.release]
strip = true
